syntax = "proto3";
package feeds.v1beta1;

option go_package = "github.com/bandprotocol/chain/v2/x/feeds/types";

import "gogoproto/gogo.proto";
import "feeds/v1beta1/feeds.proto";
import "feeds/v1beta1/params.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";

// Define a gRPC service named Msg
service Msg {
  // RPC method to update symbols
  rpc UpdateSymbols(MsgUpdateSymbols) returns (MsgUpdateSymbolsResponse);

  // RPC method to remove symbols
  rpc RemoveSymbols(MsgRemoveSymbols) returns (MsgRemoveSymbolsResponse);

  // RPC method to submit prices
  rpc SubmitPrices(MsgSubmitPrices) returns (MsgSubmitPricesResponse);

  // RPC method to update price service information
  rpc UpdatePriceService(MsgUpdatePriceService) returns (MsgUpdatePriceServiceResponse);

  // RPC method to update parameters
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  rpc SignalSymbols(MsgSignalSymbols) returns (MsgSignalSymbolsResponse);
}

message MsgSignalSymbols {
  option (cosmos.msg.v1.signer) = "delegator";
  option (amino.name)           = "feeds/MsgSignalSymbols";

  string delegator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Signal signal    = 2;
}

message MsgSignalSymbolsResponse {}

// MsgUpdateSymbols is the transaction message to add and update symbols.
message MsgUpdateSymbols {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "feeds/MsgUpdateSymbols";

  // The address of the admin that is performing the operation.
  string admin = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // A list of symbols to update or add.
  repeated UpdateSymbol symbols = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateSymbolsResponse is the response type for the Msg/UpdateSymbols RPC method.
message MsgUpdateSymbolsResponse {}

// MsgRemoveSymbols is the transaction message to remove symbols.
message MsgRemoveSymbols {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "feeds/MsgAddSymbols";

  // The address of the admin that is performing the operation.
  string admin = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // A list of symbols to remove.
  repeated string symbols = 2;
}

// MsgRemoveSymbolsResponse is the response type for the Msg/RemoveSymbols RPC method.
message MsgRemoveSymbolsResponse {}

// MsgSubmitPrices is the transaction message to submit multiple prices.
message MsgSubmitPrices {
  option (cosmos.msg.v1.signer) = "validator";
  option (amino.name)           = "feeds/MsgSubmitPrices";

  // The address of the validator that is performing the operation.
  string validator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // The timestamp use as reference of the data.
  int64 timestamp = 2;

  // A list of prices to submit.
  repeated SubmitPrice prices = 3 [(gogoproto.nullable) = false];
}

// MsgSubmitPricesResponse is the response type for the Msg/SubmitPrices RPC method.
message MsgSubmitPricesResponse {}

// MsgUpdatePriceService is the transaction message to update price service's information.
message MsgUpdatePriceService {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "feeds/MsgUpdateParams";

  // The address of the admin that is performing the operation.
  string admin = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // information of price service.
  PriceService price_service = 2 [(gogoproto.nullable) = false];
}

// MsgUpdatePriceServiceResponse is the response type for the Msg/UpdatePriceService RPC method.
message MsgUpdatePriceServiceResponse {}

// MsgUpdateParams is the transaction message to update parameters.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "feeds/MsgUpdateParams";

  // authority is the address of the governance account.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/feeds parameters to update.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse is the response type for the Msg/UpdateParams RPC method.
message MsgUpdateParamsResponse {}
